--- a/hw1/index.html
+++ b/hw1/index.html
@@ -125,21 +125,21 @@
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
-				  <img src="task6_1.png" width="400px"/>
+				  <img src="./task6_1.png" width="400px"/>
 				  <figcaption>L_ZERO, P_NEAREST</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="task6_2.png" width="400px"/>
+				  <img src="./task6_2.png" width="400px"/>
 				  <figcaption>L_ZERO, P_LINEAR</figcaption>
 				</td>
 			  </tr>
 			  <tr>
 				<td style="text-align: center;">
-				  <img src="task6_3.png" width="400px"/>
+				  <img src="./task6_3.png" width="400px"/>
 				  <figcaption>L_NEAREST, P_NEAREST</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="task6_4.png" width="400px"/>
+				  <img src="./task6_4.png" width="400px"/>
 				  <figcaption>L_NEAREST, P_LINEAR</figcaption>
 				</td>
 			  </tr>
